update - less explanation

--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/migrate-ns.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/migrate-ns.mdx
@@ -17,7 +17,7 @@ If **Intelligent DNS** is activated, hosted zones and queries could generate usa
 
 ## Create a DNS zone
 
-Before you transfer your DNS resolution Azion, you'll need:
+Before you transfer your DNS resolution Azion, you must have:
 
 - A domain registered with a hosting service.
 - An Azion [account and credentials](link_account).
