--- a/src/content/docs/en/pages/1.build/edit-cache-settings/cache-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-cache-settings/cache-settings.mdx
@@ -19,8 +19,8 @@ Some cache features require the [Application Acceleration](link_app_accel) modul
 
 To modify your application's cache settings, you need:
 
-- An [Azion account](link_accounts).
-- An [edge application](link_build_with_edge_app).
+- An Azion [account and credentials](link_account).
+- An [edge application](link_create).
 - An [Azion domain](link_config_domain).
 
 You can configure your application's cache settings using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
