--- a/src/content/docs/en/pages/1.build/edit-error-responses/error-responses.mdx
+++ b/src/content/docs/en/pages/1.build/edit-error-responses/error-responses.mdx
@@ -15,8 +15,8 @@ With **Error Responses**, you can configure your edge application to handle erro
 
 To modify your application's error responses, you must have:
 
-- An [Azion account](link_accounts).
-- An [edge application](link_build_with_edge_app).
+- An Azion [account and credentials](link_account).
+- An [edge application](link_create).
 - An [Azion domain](link_config_domain).
 - A [configured origin](link_work_orig).
 
