--- a/src/content/docs/en/pages/1.build/edit-functions-instances/functions-instances.mdx
+++ b/src/content/docs/en/pages/1.build/edit-functions-instances/functions-instances.mdx
@@ -9,7 +9,7 @@ menu_namespace: buildMenu
 
 import Button from '~/components/Button.astro'
 
-Instantiate serverless functions directly within your edge application. 
+Instantiate serverless functions created with [Edge Functions](link_ef) directly within your edge application. 
 
 <Button href="link_ef_inst" variant="secondary" text="Go to Edge Functions Instances documentation"></Button>
 
@@ -17,10 +17,10 @@ Instantiate serverless functions directly within your edge application.
 You must activate the [Edge Functions](link_app_accel) module to implement functions in your application. If **Edge Functions** is activated, computing time and invocations could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
 :::
 
-To run a function, you must have:
+To instantiate and run a function, you must have:
 
-- An [Azion account](link_accounts).
-- An [edge application](link_build_with_edge_app).
+- An Azion [account and credentials](link_account).
+- An [edge application](link_create).
 - An [Azion domain](link_config_domain).
 
 :::tip
