--- a/src/content/docs/en/pages/1.build/edit-origins/origins.mdx
+++ b/src/content/docs/en/pages/1.build/edit-origins/origins.mdx
@@ -14,11 +14,11 @@ When you create an edge application with Azion, you have to set an origin, which
 
 <Button href="link_edge_app" text="Go to Origins documentation" variant="secondary"></Button>
 
-To create a new origin for your edge application, you'll need:
+To create a new origin for your edge application, you must have:
 
-- An [Azion account](link_accounts)
-- An [edge application](link_build_with_edge_app).
-- An [Azion domain](link_config_domain)
+- An Azion [account and credentials](link_account).
+- An [edge application](link_create).
+- An [Azion domain](link_config_domain).
 
 You can choose to create and modify your origins using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
 
