--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/create-certificate.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/create-certificate.mdx
@@ -9,17 +9,11 @@ import Button from '~/components/Button.astro'
 
 If your application runs on HTTPS, you'll need a **digital certificate**. A TLS digital certificate confirms a website's identity and protects data transfers. It secures financial transactions and any exchange of sensitive information, from login credentials to personal data.
 
-When you [create a domain](link_configure_domain), you can submit your Azion domain as a SAN entry under Azion's certificate. This means that the Azion domain associated with your HTTPS edge application will be secure. However, **Azion SAN** only protects `azionedge.net` domains.
-
-If you [point your domain](link_point_domain) or [migrate your NS resolution](link_migrate_ns) to Azion, your custom domain won't be protected by Azion's certificate and you will need a custom certificate or a Let's Encrypt certificate. 
-
-At Azion, you can upload your own TLS certificate acquired from a Certificate Authority (CA). When submitting a request for a certificate to a CA, you can include multiple custom domains that the certificate must encrypt. You can assign this certificate across Azion domains and edge applications. This means you can use the same certificate for many domains, as long as the host or CNAMEs listed in the domains were also included in the signed certificate.
-
-Azion supports digital certificates that use the X.509 standard. This certificate holds owner identification, a public key, and is either signed by a CA or self-signed. Another type of certificate supported by Azion is **Trusted CA**. These are digital certificates signed by a CA and supported by the CA's root certificate under a *chain of trust* model.
-
-You can also request that a **Let's Encrypt certificate** be generated for your domain through Azion. The process for requesting a Let's Encrypt certificate is different from the previous types of certificates. See [how to generate a Let's Encrypt certificate](link_guide_lets) for more information.
-
 <Button href="link_dig_cert" variant="secondary" text="Go to Digital Certificates documentation"></Button>
+
+:::note
+You can also request that a **Let's Encrypt certificate** be generated for your domain through Azion. The process for requesting a Let's Encrypt certificate is different from custom certificates. See [how to generate a Let's Encrypt certificate](link_guide_lets) for more information.
+:::
 
 To register your custom certificate with Azion, you'll need:
 
