--- a/src/content/docs/en/pages/1.build/1-buildWithEdgeApplications/build-with-edge-apps.mdx
+++ b/src/content/docs/en/pages/1.build/1-buildWithEdgeApplications/build-with-edge-apps.mdx
@@ -18,7 +18,11 @@ Azion **Edge Application** allows you to configure numerous settings, from behav
 Have an application and want to move to the edge? [Migrate to Azion](link_migrate). Already work with a certain framework or have an infrastructure in mind? [Check the available Templates](link_templates).
 :::
 
-To create an edge application, you'll need an [Azion account](link_accounts). You can choose to configure your application using [Real-Time Manager (RTM)](#via-rtm), the [Azion CLI](#via-cli) or the [Azion API](#via-api).
+To create an edge application,  you must have:
+
+- An Azion [account and credentials](link_account).
+
+You can choose to configure your application using [Real-Time Manager (RTM)](#via-rtm), the [Azion CLI](#via-cli), or the [Azion API](#via-api).
 
 ## Via RTM
 
