--- a/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
@@ -13,10 +13,10 @@ Once you create an edge application with Azion, you have a range of configuratio
 
 <Button href="link_edge_app" variant="secondary" text="Go to Edge Application documentation"></Button>
 
-To modify your application's delivery main settings, you need:
+To modify your application's delivery main settings, you must have:
 
-- An [Azion account](link_accounts).
-- An [edge application](link_build_with_edge_app).
+- An Azion [account and credentials](link_account).
+- An [edge application](link_create).
 - An [Azion domain](link_config_domain).
 
 You can choose to configure your application using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
