--- a/src/content/docs/en/pages/1.build/edit-rules-engine/rules-engine.mdx
+++ b/src/content/docs/en/pages/1.build/edit-rules-engine/rules-engine.mdx
@@ -11,14 +11,6 @@ import Button from '~/components/Button.astro'
 
 Implementing rules in your application allow you to determine the tasks it should execute in specific scenarios without modifying your application's code. This guide demonstrates the process of creating rules with some practical examples, but most rules will be unique to each application and its needs.
 
-For a better understanding of the process, these are some of the key terms and information you need to know beforehand:
-
-Rules are composed of two major elements:
-
-1. **Criteria** are what determine what will trigger the execution of the rule. They can be customized to your needs through the use of **variables**, which will represent a specific value from your edge application or the request itself. You can then use **comparison operators** to match the variable against an **argument**, which is a value that you can determine. You can also use **logical operators** to add additional criteria and determine how they interact.
-
-2. **Behaviors** are a set of specific actions that your application can perform when the criteria are met. Some behaviors also take specific directives in the form of **arguments**.
-
 <Button href="/en/documentation/products/edge-application/rules-engine/" variant="secondary" text="Go to Rules Engine documentation"></Button>
 
 :::caution[warning]
@@ -27,8 +19,8 @@ To unlock the full capabilities of Rules Engine, you should activate the [Applic
 
 To create a rule, you must have:
 
-- An [Azion account](link_accounts).
-- An [edge application](link_build_with_edge_app).
+- An Azion [account and credentials](link_account).
+- An [edge application](link_create).
 - An [Azion domain](link_config_domain).
 
 You can create rules through [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
