most links added!

--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/point-domain.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/point-domain.mdx
@@ -10,15 +10,15 @@ import Button from '~/components/Button.astro'
 To point your traffic to Azion, you must associate your **Azion domain** to your **custom domain**. To do that, you must configure your DNS provider and associate the address of your custom domain to the `xxxxxxxxxx.map.azionedge.net` address. 
 
 :::note
-This process will require you to associate a CNAME record to your domain. See [Migrate your DNS to Azion](link_migrate) for more information on how to associate an ANAME type record.
+This process will require you to associate a CNAME record to your domain. See [Migrate your DNS to Azion](/en/documentation/products/guides/migrate-ns-to-azion/) for more information on how to associate an ANAME type record.
 :::
 
 Before you point your domain to Azion, you must have:
 
 - A domain registered with a hosting service.
-- An Azion [account and credentials](link_account).
-- An [edge application](link_create).
-- A [custom domain](link_configure#custom-domain).
+- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
+- An [edge application](/en/documentation/products/guides/build/overview/).
+- A [custom domain](/en/documentation/products/guides/configure-a-domain/#link-a-custom-domain-to-your-application).
 
 ## Verify custom domain
 
@@ -30,7 +30,7 @@ To point your Azion domain to a custom domain, you need to list the CNAMEs you w
 
 1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and then select **Domain**.
-3. Click the domain you want to associate your custom domain to. If you don't have a domain, [create one first](link_configure_domain).
+3. Click the domain you want to associate your custom domain to.
 4. In the **CNAME** field, add the custom domains for the application. For example: `yourdomain.com`.
 5. Disable the **CNAME access only** switch.
 5. Click the **Save** button.
@@ -39,7 +39,7 @@ Now your Azion domain is ready to be associated to a custom domain on your DNS p
 
 ### Via API
 
-Before you run the API, you'll need a personal token. See the [Azion API documentation](link_api_personal_token) for more information.
+Before you run the API, you'll need a personal token. See the [Azion API documentation](/en/documentation/products/guides/personal-tokens/) for more information.
 
 To edit a domain with the CNAMEs you want to associate to the edge application:
 
@@ -91,7 +91,7 @@ curl --location --request PATCH 'https://api.azionapi.net/domains/<domain_id>' \
   | `cnames` | Accepts a list of CNAMEs for the domains as values. For example, `["*.yourdomain.com", "*.yourdomain.org"]`. |
 
 :::tip
-If your application uses HTTPS, you might want to combine this process with the [association of a digital certificate](link_digital_certificate) to your custom domain.
+If your application uses HTTPS, you might want to combine this process with the [association of a digital certificate](/en/documentation/products/guides/create-a-digital-certificate/) to your custom domain.
 :::
 
 5. You should receive a response with the updated data.
@@ -103,7 +103,7 @@ If your application uses HTTPS, you might want to combine this process with the 
 Once you have a domain, you need to access your DNS provider and locate the **records management** area. There, you can modify every entry associated with your domain. The entry you need to associate your Azion domain to is a **CNAME** record.
 
 :::note
-Some services *don't allow you* to change your ANAME resolution directly, meaning you cannot directly point `yourdomain.org` to Azion this way. See how to [migrate your NS to Azion](link_migrate_ns).
+Some services *don't allow you* to change your ANAME resolution directly, meaning you cannot directly point `yourdomain.org` to Azion this way. See how to [migrate your NS to Azion](/en/documentation/products/guides/migrate-ns-to-azion/).
 :::
 
 At your DNS provider, you can add or modify a `www` CNAME record and associate it to your edge application. See the documentation on how to edit domain records of some of the most popular DNS providers below:
@@ -138,5 +138,5 @@ dig +short yourdomain.org @200.0.0.0
 Once the changes have propagated, you'll be able to access your edge application through your custom domain.
 
 :::tip
-Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about all features available via API.
 :::
