--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/configure-domains.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/configure-domains.mdx
@@ -9,23 +9,22 @@ import Button from '~/components/Button.astro'
 
 With Azion, you can create and run applications directly on the edge. To enable access to your application via a browser and start receiving users and tracking metrics, you'll need a domain. Azion supplies a complimentary Azion domain address, in the format `xxxxxxxxxx.map.azionedge.net`. When users access your application through this Azion domain, their browser seeks out the closest edge node within Azion's network to find the associated edge application.
 
-<Button href="link_domains" variant="secondary" text="Go to Domains documentation"></Button>
+<Button href="/documentation/products/edge-application/domains/" variant="secondary" text="Go to Domains documentation"></Button>
 
 Before you create your Azion domain, you must have:
 
-- An Azion [account and credentials](link_account).
-- An [edge application](link_create).
-
+- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
+- An [edge application](/en/documentation/products/guides/build/overview/).
 
 :::tip
-Don't have an edge application? [Build with edge application](link_build_edge_app) or [check the available templates](link_templates).
+Don't have an edge application? [Build with edge application](/en/documentation/products/guides/build/build-with-edge-application/) or [check the available templates](/en/documentation/products/start-with-a-template/).
 :::
 
 You can choose to configure your domain using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
 
 ## Via RTM
 
-When you create an application [using a template](link_templates) or [via CLI](link_cli), your application is automatically associated with an Azion domain. To check your created domains:
+When you create an application [using a template](/en/documentation/products/start-with-a-template/) or [via CLI](/en/documentation/products/build/develop-with-azion/cli/), your application is automatically associated with an Azion domain. To check your created domains:
 
 1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and then select **Domain**.
@@ -46,7 +45,7 @@ Wait some minutes for your new domain to propagate to the edge nodes and access 
 
 This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
 
-Before you run the Azion API, you need to [generate a personal token](link_personal_token) for your account.
+Before you run the Azion API, you need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account.
 
 With your credentials in hand, follow the steps to create an Azion domain via API:
 
@@ -69,8 +68,8 @@ curl --location 'https://api.azionapi.net/domains' \
   | --- | --- |
   | `name` | Sets the string in value as a name of the domain entry with Azion. You may modify this value to fit your needs, since it does not represent a domain address. |
   | `cname_access_only` | When set to `false`, enables access via the Azion address. |
-  | `digital_certificate_id` | When `null`, selects the **Azion SAN** certificate. If you want to associate your own certificate, see [Create a digital certificate](link_create_certificate#via-api). |
-  | `edge_application_id` | The ID of the edge application linked to the domain. To get the ID, see [Build with Edge Application](link_build_edge_app#via-api) |
+  | `digital_certificate_id` | When `null`, selects the **Azion SAN** certificate. If you want to associate your own certificate, see [Create a digital certificate](/en/documentation/products/guides/create-a-digital-certificate/#via-api). |
+  | `edge_application_id` | The ID of the edge application linked to the domain. To get the ID, see [Build with Edge Application](/en/documentation/products/guides/build/build-with-edge-application/#via-api) |
 
 2. You'll receive a response similar to:
 
@@ -95,7 +94,7 @@ curl --location 'https://api.azionapi.net/domains' \
 3. The `domain_name` received in the response carries your application's Azion domain as a string. Wait a few minutes for the changes to propagate and paste its value without the double quotes (`"`) in your browser to access your application.
 
 :::tip
-Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about all features available via API.
 :::
 
 ## Link a custom domain to your application
@@ -106,4 +105,4 @@ When a user enters the custom domain name in their browser, a DNS lookup process
 
 Once the user's browser receives the IP address, it establishes a connection with the appropriate edge node. The edge node then serves the requested content, and the user's browser displays the edge application.
 
-You can choose to customize your domain by [associating a domain record](link_point_domain) or [migrating your name resolution to Azion](link_migrate_ns).
+You can choose to customize your domain by [associating a domain record](/en/documentation/products/guides/point-domain-to-azion/) or [migrating your name resolution to Azion](/en/documentation/products/guides/migrate-ns-to-azion/).
