--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/migrate-ns.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/migrate-ns.mdx
@@ -9,7 +9,7 @@ import Button from '~/components/Button.astro'
 
 Azion allows you to host and manage DNS zones and records by redirecting the DNS resolution of your domain provider to Azion's authoritative nameservers (NS) through **Intelligent DNS**.
 
-<Button href="link_int_dns" variant="secondary" text="Go to Intelligent DNS documentation"></Button>
+<Button href="/en/documentation/products/intelligent-dns/" variant="secondary" text="Go to Intelligent DNS documentation"></Button>
 
 :::caution[warning]
 If **Intelligent DNS** is activated, hosted zones and queries could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
@@ -20,7 +20,7 @@ If **Intelligent DNS** is activated, hosted zones and queries could generate usa
 Before you transfer your DNS resolution Azion, you must have:
 
 - A domain registered with a hosting service.
-- An Azion [account and credentials](link_account).
+- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
 
 You can choose to migrate your name resolution to Azion using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
 
@@ -49,7 +49,7 @@ You'll be redirected to your list of zones. To get the Azion nameservers:
 
 ### Via API
 
-Before you run the API, you'll need a personal token. See the [Azion API documentation](link_api_personal_token) for more information.
+Before you run the API, you'll need a personal token. See the [Azion API documentation](/en/documentation/products/guides/personal-tokens/) for more information.
 
 To create a DNS zone:
 
@@ -124,9 +124,9 @@ After you've successfully migrated your DNS zone to Azion, you won't need to acc
 Before you transfer your DNS resolution to Azion, you'll need:
 
 - A domain registered with a hosting service whose [DNS resolution has been transferred to Azion](#redirect-authoritative-nameservers).
-- An Azion [account and credentials](link_account).
-- An [edge application](link_create).
-- An [Azion domain](link_configure#create-an-azion-domain).
+- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).    
+- An [edge application](/en/documentation/products/guides/build/overview/).
+- An [Azion domain](/en/documentation/products/guides/configure-a-domain/).
 
 ### Via RTM
 
@@ -134,7 +134,7 @@ To customize the domain of your edge application under your new zone, you need t
 
 1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and then select **Domain**.
-3. Click the domain you want to associate your custom domain to. If you don't have a domain, [create one first](link_configure_domain).
+3. Click the domain you want to associate your custom domain to.
 4. In the **CNAME** field, add the custom domains for the application that should be under your DNS zone. If you already added a custom domain, copy those values and keep them in hand.
 
 Now you'll need to navigate to the **Intelligent DNS** area to add a record for your edge application's CNAMEs:
@@ -152,7 +152,7 @@ Repeat the process described above for every CNAME listed for your application. 
 
 ### Via API
 
-Before you run the API, you'll need a personal token. See the [Azion API documentation](link_api_personal_token) for more information.
+Before you run the API, you'll need a personal token. See the [Azion API documentation](/en/documentation/products/guides/personal-tokens/) for more information.
 
 To customize the domains of your zone for your edge application:
 
@@ -243,7 +243,7 @@ curl --location 'https://api.azionapi.net/intelligent_dns/<hosted_zone_id>/recor
 
   | Key | Description |
   | --- | --- |
-  | `record_type` | The type of record being created. See a full list of accepted record types in the [Intelligent DNS documentation](link_idns). |
+  | `record_type` | The type of record being created. See a full list of accepted record types in the [Intelligent DNS documentation](/en/documentation/products/intelligent-dns/). |
   | `entry` | Sets the value of the entry, appending it to the apex domain from the zone to generate the record. For example, the value `www` will represent a record for `www.yourdomain.com`. Accepts the wildcard (`*`) notation. |
   | `answers_list` | Accepts a list of CNAMEs for the domains as values. In the example described above, the CNAME is the Azion address. |
   | `description` | Sets the string as a record description. |
@@ -271,5 +271,5 @@ curl --location 'https://api.azionapi.net/intelligent_dns/<hosted_zone_id>/recor
 8. Wait a couple of minutes for the changes to propagate. You can [run the DIG command](/en/documentation/products/guides/run-the-dig-command/) in your terminal to check whether your domain points to the Azion address.
 
 :::tip
-Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about all features available via API.
 :::
