--- a/src/content/docs/en/pages/1.build/0-overview/overview.mdx
+++ b/src/content/docs/en/pages/1.build/0-overview/overview.mdx
@@ -16,14 +16,14 @@ Welcome to Azion Build products - your gateway to harnessing the power of edge c
 
 Through reverse-proxy architecture, Edge Application processes user requests at the edge of the network. By directing requests to origin servers and utilizing edge caching capabilities, following requests can access data cached at the network edge, decentralizing storage and optimizing data transfer rates and efficiency. You can also transfer the processing of origin responses to the edge. This scalability allows you to adapt to growing traffic demands without over-loading your infrastructure and reducing maintenance costs.
 
-<Button href="link_edge_foundations" variant="secondary" text="Go to Edge Foundations"></Button>
+<Button href="/en/documentation/products/edge-foundations/what-edge-computing-is/" variant="secondary" text="Go to Edge Foundations"></Button>
 
 Azion provides a range of tools to configure your application at the edge: 
 
-- [Real-Time Manager (RTM)](link_manager): provides a user-friendly interface to configure your application and monitor data.
-- [Azion CLI](link_cli_doc): enables the team to interact with Azion's system directly from the command line interface.
-- [Azion API](link_api_doc): allows you to integrate and automate application deployment, scaling, and monitoring processes.
-- [Terraform](link_terraform_doc): integrate your infrastructure with Azion using Terraform.
+- [Real-Time Manager (RTM)](https://manager.azion.com): provides a user-friendly interface to configure your application and monitor data.
+- [Azion CLI](/en/documentation/products/build/develop-with-azion/cli/): enables the team to interact with Azion's system directly from the command line interface.
+- [Azion API](https://api.azion.com): allows you to integrate and automate application deployment, scaling, and monitoring processes.
+- [Terraform](/en/documentation/products/terraform-provider/): integrate your infrastructure with Azion using Terraform.
 
 When you build an edge application, you can determine where your content will be retrieved from and configure the domain that will be used to deliver your application to your end-users.
 
