--- a/src/content/docs/en/pages/1.build/advanced-configurations/image-processor.mdx
+++ b/src/content/docs/en/pages/1.build/advanced-configurations/image-processor.mdx
@@ -14,20 +14,20 @@ Through the **Image Processor** module, you can adjust image sizes, add filters 
 <Button href="/en/documentation/products/edge-application/image-processor/" variant="secondary" text="Go to Image Processor documentation"></Button>
 
 :::caution[warning]
-If you wish to optimize your images, the [Image Processor](link_img_process) module is required, and the [Application Acceleration](link_app_accel) module is recommended for cache efficiency. If these modules are activated, images processed and data transfer could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
+If you wish to optimize your images, in addition to the **Image Processor module, the activation of the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) module is recommended for cache efficiency. If these modules are activated, images processed and data transfer could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
 :::
 
 To activate this module and start processing your images, you must have:
 
-- An Azion [account and credentials](link_account).
-- An [edge application](link_create).
-- An [Azion domain](link_config_domain).
+- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
+- An [edge application](/en/documentation/products/guides/build/overview/).
+- An [Azion or custom domain](/en/documentation/products/guides/configure-a-domain/).
 
 You can optimize your images through the [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
 
 ## Via RTM
 
-1. [Access RTM](link_rtm).
+1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and select **Edge Application**.
 3. Click the edge application you want to configure. 
 4. Activate the **Application Acceleration** and **Image Processor** modules.
@@ -73,11 +73,11 @@ To confirm whether your image is being optimized, [inspect the page](https://dev
 
 This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
 
-Before you run the Azion API, you'll need to [generate a personal token](link_personal_token) for your account. You also need to [retrieve your edge application ID](link_configure_edge_app) to run the following requests.
+Before you run the Azion API, you'll need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account. You also need to [retrieve your edge application ID](/en/documentation/products/guides/build/configure-main-settings/) to run the following requests.
 
 With your token and edge application ID in hand, follow the steps to activate image processor via API:
 
-1. Run the following `PATCH` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and the `<edge_application_id>` variable with the `id` of your edge application to activate the [Application Acceleration](link_app_accel) and [Image Processor](link_img_process) modules:
+1. Run the following `PATCH` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and the `<edge_application_id>` variable with the `id` of your edge application to activate the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) and [Image Processor](/en/documentation/products/edge-application/image-processor/) modules:
 
 ```bash
 curl --location --request PATCH 'https://api.azionapi.net/edge_applications/<edge_application_id>' \
@@ -112,7 +112,7 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 ```
 
 :::note
-For more information on the cache settings endpoint, see [Tune your cache settings](link_tune).
+For more information on the cache settings endpoint, see [Tune your cache settings](/en/documentation/products/guides/build/tune-cache-settings/).
 :::
 
 4. You'll receive a response similar to this:
@@ -188,7 +188,7 @@ curl --location --globoff 'https://api.azionapi.net/edge_applications/<edge_appl
 ```
 
 :::note
-For more information on the rules endpoint, see [Work with Rules Engine](link_work_rules).
+For more information on the rules endpoint, see [Work with Rules Engine](/en/documentation/products/guides/build/work-with-rules-engine/).
 :::
 
 7. You'll receive the following response:
@@ -233,7 +233,7 @@ For more information on the rules endpoint, see [Work with Rules Engine](link_wo
 ```
 
 :::tip
-Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about all features available via API.
 :::
 
 From this point on, images from the configured path will be automatically processed. 
