--- a/src/content/docs/en/pages/1.build/edit-functions-instances/functions-instances.mdx
+++ b/src/content/docs/en/pages/1.build/edit-functions-instances/functions-instances.mdx
@@ -9,19 +9,19 @@ menu_namespace: buildMenu
 
 import Button from '~/components/Button.astro'
 
-Instantiate serverless functions created with [Edge Functions](link_ef) directly within your edge application. 
+Instantiate serverless functions created with [Edge Functions](/en/documentation/products/edge-application/edge-functions/) directly within your edge application. 
 
-<Button href="link_ef_inst" variant="secondary" text="Go to Edge Functions Instances documentation"></Button>
+<Button href="/en/documentation/products/edge-application/edge-functions-instances/" variant="secondary" text="Go to Edge Functions Instances documentation"></Button>
 
 :::caution[warning]
-You must activate the [Edge Functions](link_app_accel) module to implement functions in your application. If **Edge Functions** is activated, computing time and invocations could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
+You must activate the [Edge Functions](/en/documentation/products/edge-application/application-acceleration/) module to implement functions in your application. If **Edge Functions** is activated, computing time and invocations could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
 :::
 
 To instantiate and run a function, you must have:
 
-- An Azion [account and credentials](link_account).
-- An [edge application](link_create).
-- An [Azion domain](link_config_domain).
+- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
+- An [edge application](/en/documentation/products/guides/build/overview/).
+- An [Azion or custom domain](/en/documentation/products/guides/configure-a-domain/).
 
 :::tip
 For this guide, you can use any function already available on [Azion Marketplace](https://marketplace.azion.com/) or create your own. Check the guide on [How to build an API with Edge Functions and ChatGPT](/en/documentation/products/guides/edge-functions/api-builder/) for an example of a function you can run in your application. 
@@ -33,13 +33,13 @@ You can instantiate edge functions through [Real-Time Manager (RTM)](#via-rtm) o
 
 In this section, you'll instantiate a function for your application. To enable this functionality, you must first activate the **Edge Functions** module:
 
-1. [Access RTM](link_rtm).
+1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and select **Edge Application**.
 3. Click the edge application you want to configure. 
 4. Activate the **Edge Functions** module to enable functions.
 5. Click the **Save** button.
 
-Now you're able to instantiate edge functions. You can [create a function using Edge Functions](link_develop_function), but this guide will use the pre-configured *Azion - Hello World* function, a global function included in all Azion accounts.
+Now you're able to instantiate edge functions. You can [create a function using Edge Functions](/en/documentation/products/edge-application/edge-functions/), but this guide will use the pre-configured *Azion - Hello World* function, a global function included in all Azion accounts.
 
 To instantiate the *Hello World* function, still on the **Edge Application** page:
 
@@ -58,7 +58,7 @@ The instructions below will help you create a rule in which any request from you
 3. Under the **Criteria** section, select the variable `${uri}`.
 
 :::note
-The `${uri}` variable may already be selected by default if you didn't activate **Application Acceleration**. For more information on Edge Application modules, see [Modules](link_modules).
+The `${uri}` variable may already be selected by default if you didn't activate **Application Acceleration**. For more information on Edge Application modules, see the [Edge Application documentation](/en/documentation/products/edge-application/#modules).
 :::
 
 4. As a comparison operator, select **is equal**.
@@ -73,11 +73,11 @@ To see your function running, access your application using its domain and the U
 
 This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
 
-Before you run the Azion API, you'll need to [generate a personal token](link_personal_token) for your account. You also need to [retrieve your edge application ID](link_configure_edge_app) to run the following requests.
+Before you run the Azion API, you'll need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account. You also need to [retrieve your edge application ID](/en/documentation/products/guides/build/configure-main-settings/) to run the following requests.
 
 With your token and edge application ID in hand, follow the steps to instantiate an edge function via API:
 
-1. Run the following `PATCH` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and the `<edge_application_id>` variable with the `id` of your edge application to activate the [Edge Functions](link_edge_functions) module:
+1. Run the following `PATCH` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and the `<edge_application_id>` variable with the `id` of your edge application to activate the [Edge Functions](/en/documentation/products/edge-application/edge-functions/) module:
 
 ```bash
 curl --location --request PATCH 'https://api.azionapi.net/edge_applications/<edge_application_id>' \
@@ -188,7 +188,7 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 ```
 
 :::note
-For more information on the rules endpoint, see [Work with Rules Engine](link_work_rules).
+For more information on the rules endpoint, see [Work with Rules Engine](/en/documentation/products/guides/build/work-with-rules-engine/).
 :::
 
 9. You'll receive a response similar to this, confirming your function was created successfully:
@@ -227,5 +227,5 @@ For more information on the rules endpoint, see [Work with Rules Engine](link_wo
 To see your function running, access your application using its domain and the URI set in the rule, which is in the format `xxxxxxxxx.map.azionedge.net/hello-world`.
 
 :::tip
-Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about what the Azion API can offer.
+Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about what the Azion API can offer.
 :::
