--- a/src/content/docs/en/pages/1.build/edit-origins/origins.mdx
+++ b/src/content/docs/en/pages/1.build/edit-origins/origins.mdx
@@ -9,16 +9,15 @@ menu_namespace: buildMenu
 
 import Button from '~/components/Button.astro'
 
+When you create an edge application with Azion, you have to set an origin, which can be an application, a web server, or a storage. When you [created an edge application](link_build_with_edge_app) or [used a template](/en/documentation/products/start-with-a-template/), you already created a default origin.
 
-When you create an edge application with Azion, you have to set an origin, which can be an application, a web server, or a storage. When you [created an edge application](link_build_with_edge_app) or [used a template](link_templates), you already created a default origin.
-
-<Button href="link_edge_app" text="Go to Origins documentation" variant="secondary"></Button>
+<Button href="/en/documentation/products/edge-application/origins/" text="Go to Origins documentation" variant="secondary"></Button>
 
 To create a new origin for your edge application, you must have:
 
-- An Azion [account and credentials](link_account).
-- An [edge application](link_create).
-- An [Azion domain](link_config_domain).
+- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
+- An [edge application](/en/documentation/products/guides/build/overview/).
+- An [Azion or custom domain](/en/documentation/products/guides/configure-a-domain/).
 
 You can choose to create and modify your origins using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
 
@@ -28,7 +27,7 @@ In this section, you'll add a new origin to your application without overriding 
 
 To configure your origins through RTM:
 
-1. [Access RTM](link_rtm).
+1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and then select **Edge Application**.
 3. Click the edge application for which you want to configure a new origin.
 4. Select the **Origins** tab.
@@ -76,7 +75,7 @@ The instructions below will help you create a rule in which any request from you
 3. Under the **Criteria** section, select the variable `${uri}`.
 
 :::note
-The `${uri}` variable may already be selected by default if you didn't activate **Application Acceleration**. For more information on Edge Application modules, see [some link idk](link_modules).
+The `${uri}` variable may already be selected by default if you didn't activate **Application Acceleration**. For more information on Edge Application modules, see the [Edge Application documentation](/en/documentation/products/edge-application/#modules).
 :::
 
 4. As a comparison operator, select **is equal**.
@@ -90,7 +89,7 @@ The `${uri}` variable may already be selected by default if you didn't activate 
 
 This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
 
-Before you run the Azion API, you'll need to [generate a personal token](link_personal_token) for your account. You also need to [retrieve your edge application ID](link_configure_edge_app) to run the following requests.
+Before you run the Azion API, you'll need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account. You also need to [retrieve your edge application ID](/en/documentation/products/guides/build/configure-main-settings/) to run the following requests.
 
 With your token and edge application ID in hand, follow the steps to create a new origin via API:
 
@@ -191,5 +190,5 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 4. Wait a few minutes for the changes to propagate and access `xxxxxxxxxx.map.azionedge.net/httpbin`. Also, try accessing any other unconfigured URI: you should receive a `404` error.
 
 :::tip
-Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about all features available via API.
 :::
