--- a/src/content/docs/en/pages/1.build/edit-rules-engine/rules-engine.mdx
+++ b/src/content/docs/en/pages/1.build/edit-rules-engine/rules-engine.mdx
@@ -14,14 +14,14 @@ Implementing rules in your application allow you to determine the tasks it shoul
 <Button href="/en/documentation/products/edge-application/rules-engine/" variant="secondary" text="Go to Rules Engine documentation"></Button>
 
 :::caution[warning]
-To unlock the full capabilities of Rules Engine, you should activate the [Application Acceleration](link_app_accel) module. If **Application Acceleration** is activated, data transfer could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
+To unlock the full capabilities of Rules Engine, you should activate the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) module. If **Application Acceleration** is activated, data transfer could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
 :::
 
 To create a rule, you must have:
 
-- An Azion [account and credentials](link_account).
-- An [edge application](link_create).
-- An [Azion domain](link_config_domain).
+- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
+- An [edge application](/en/documentation/products/guides/build/overview/).
+- An [Azion or custom domain](/en/documentation/products/guides/configure-a-domain/).
 
 You can create rules through [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
 
@@ -31,7 +31,7 @@ In this section, you'll create two rules, one in each available phase, using **R
 
 First, activate the **Application Acceleration** module:
 
-1. [Access RTM](link_rtm).
+1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and select **Edge Application**.
 3. Click the edge application you want to configure. 
 4. Activate the **Application Acceleration** module.
@@ -81,11 +81,11 @@ Now, when a request is made to your application, the `Server` header will be rem
 
 This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
 
-Before you run the Azion API, you'll need to [generate a personal token](link_personal_token) for your account. You also need to [retrieve your edge application ID](link_configure_edge_app) to run the following requests.
+Before you run the Azion API, you'll need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account. You also need to [retrieve your edge application ID](/en/documentation/products/guides/build/configure-main-settings/) to run the following requests.
 
 With your token and edge application ID in hand, follow the steps to create rules via API:
 
-1. Run the following `PATCH` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and the `<edge_application_id>` variable with the `id` of your edge application to activate the [Application Acceleration](link_app_accel) module:
+1. Run the following `PATCH` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and the `<edge_application_id>` variable with the `id` of your edge application to activate the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) module:
 
 ```bash
 curl --location --request PATCH 'https://api.azionapi.net/edge_applications/<edge_application_id>' \
@@ -229,5 +229,5 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 7. Wait a few minutes for the changes to propagate.
 
 :::tip
-Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about all features available via API.
 :::
