fixes and update
fixes based on last call feedback.
add img - edge timeline.
add rtm doc.

--- a/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
@@ -11,7 +11,7 @@ import Button from '~/components/Button.astro';
 
 To better understand the rise of edge computing and how it works, it's helpful to review the historical context around the different stages of computing.
 
-[IMG Historical context and evolution: in-progress]
+![Timeline about edge computing](/public/assets/docs/images/uploads/edge-timeline.png)
 
 The exponential growth of online data has forced the technology market to look for new solutions that allow serving it, especially related to the storage and processing of all this data in a faster and safer way. From centralized mainframes to distributed systems, each stage has brought significant advancements in how applications are built and run. 
 
@@ -118,10 +118,5 @@ frameborder="0"
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 allowfullscreen></iframe>
 
-Overall, cloud computing and edge computing paradigms often serve as integral components of modern computing ecosystems and complement each other, allowing organizations to create hybrid architectures, delivering a more versatile and efficient computing environment for various applications and industries.
-
-<Button href="Learning material" text="Go to the edge and hybrid-cloud workloads case" variant="secondary"> 
-
-</Button>
-
+Overall, cloud computing and edge computing paradigms often serve as integral components of modern computing ecosystems and complement each other, allowing organizations to create hybrid architectures, delivering a more versatile and efficient computing environment for various applications and industries. Check the Learning material about [the edge and hybrid-cloud workloads case]() to know more about these possibilities.
 
