--- a/src/content/docs/en/pages/get-started/get-started.mdx
+++ b/src/content/docs/en/pages/get-started/get-started.mdx
@@ -34,10 +34,10 @@ If you don't have an Azion account yet, you can go to the [sign-up page](https:/
 
 Azion provides different products and modules based on edge computing technology, grouped into four main categories that reflect each step in the process of building and managing edge applications:
 
-- **Build**
-- **Secure**
-- **Deploy**
-- **Observe**
+- [Build](/en/documentation/products/guides/build/overview/)
+- [Secure](/en/documentation/products/guides/secure/overview/)
+- [Deploy](/en/documentation/products/guides/deploy/overview/)
+- [Observe](/en/documentation/products/guides/observe/overview/)
 
 Following the *suggested journey* presented below, you can experience this whole process first hand:
 
