--- a/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/how-azion-works.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/how-azion-works.mdx
@@ -66,12 +66,14 @@ Edge Traffic Router can be easily extended to work as a multi-CDN, multi-edge, o
 
 ### Azion Marketplace
 
-Azion **Marketplace** is a digital catalog that makes it easy to find, test, and deploy edge-running software. With a wide range of solutions, you can use them to improve, compose, or customize your edge applications.
+Azion **Marketplace** is a digital catalog that makes it easy to find, test, and deploy edge-running software. With a wide range of solutions, you can use them to enhance and speed up your development and deployment processes.
 
-The solutions run edge functions in two ways:
+You can use an [Integration]() to run edge functions in two ways:
 
-- By using [Edge Firewall](/en/documentation/products/edge-firewall/), being solutions focused on network security, authentication, and traffic control.
-- By using [Edge Application](/en/documentation/products/edge-application/), being solutions that attend to uses cases related to processing data or running services on the edge, closer to the user.
+- By using [Edge Firewall](/en/documentation/products/edge-firewall/), being integrations focused on network security, authentication, and traffic control.
+- By using [Edge Application](/en/documentation/products/edge-application/), being integrations that attend to uses cases related to processing data or running services on the edge, closer to the user.
+
+Or you can start building with a [Template]() with a specific use case to accelerate your workflow. 
 
 <Button href="/en/documentation/products/marketplace/" text="Go to Azion Marketplace reference" variant="secondary"> 
 
