--- a/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/how-use-azion.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/how-use-azion.mdx
@@ -7,18 +7,20 @@ permalink: /documentation/products/azion-foundations/explore-azion/
 ---
 import Button from '~/components/Button.astro';
 
-To start using Azion, you must [create a new account](/en/documentation/products/accounts/creating-account/) via **Real-Time Manager (RTM)**.
+To start using Azion, you must [create a new account](https://manager.azion.com/signup) via **Real-Time Manager (RTM)**.
 
 The [Get started](/en/documentation/products/get-started/) documentation provides information to guide you in your first steps: getting to know the platform, building your first application, completing a few configurations, and checking your metrics.
 
-You can also **Choose your journey** and explore the products or features of [Azion categories](/en/documentation/products/azion-foundations/azion-products-catalog/):
+If you **Choose your journey**, you get to know the products or features of [Azion categories](/en/documentation/products/azion-foundations/azion-products-catalog/):
 
 - [Build](/en/documentation/products/guides/build/overview/)
-- [Secure](link secure overview)
-- [Deploy](link deploy overview)
-- [Observe](link observe overview)
+- [Secure](/en/documentation/products/guides/secure/overview/)
+- [Deploy](/en/documentation/products/guides/deploy/overview/)
+- [Observe](/en/documentation/products/guides/observe/overview/)
 
-Or review the [Developer tools](/en/documentation/products/dev-tools/) and find the one that adapts to you better.
+You can go to the [Develop with Aion](/documentation/products/build/develop-with-azion/overview/) section to find the tool that adapts to you better, including [Azion CLI](/en/documentation/products/cli/), [GraphQL API](https://www.azion.com/en/documentation/products/graphql-api-overview/), [Azion Terraform Provider](https://www.azion.com/en/documentation/products/terraform-provider/), [Azion Go SDK](https://www.azion.com/en/documentation/devtools/sdk/go/), amd the [code editor](/en/documentation/products/edge-application/edge-functions/runtime-api/code-editor/).
+
+Azion also offers support for a variety of [frameworks](/en/documentation/products/build/develop-with-azion/frameworks-specific/overview/) to write and deploy your own code to the edge.
 
 :::tip
 If you're a company looking for a Business or higher support plan, [contact the Azion Experts](https://www.azion.com/en/contact-sales/). They can assess, plan, and implement solutions according to your needs, helping you to adopt Azion Edge Platform faster.
@@ -26,7 +28,7 @@ If you're a company looking for a Business or higher support plan, [contact the 
 
 ### More on Azion
 
-You can also explore other resources to learn further about **Azion Edge Platform**.
+Explore other resources to learn further about **Azion Edge Platform**.
 
 - Understand your account: explore how your Azion account works and how to set up the main configurations.
 - [Azion Roadmap](https://azion.com/en/roadmap/): find out the latest launched products and features and the projects Azion is working on.
