dev-command-link

--- a/src/content/docs/en/pages/get-started/start-with-a-template.mdx
+++ b/src/content/docs/en/pages/get-started/start-with-a-template.mdx
@@ -146,7 +146,7 @@ The following steps are based on the answer you gave.
 - [If you chose not to have a local development server running](#answering-no-to-local-dev).
 
 :::note
-If you want to create your own local development server, read the []() documentation for more details.
+If you want to create your own local development server, read the [Azion CLI's dev command](/en/documentation/products/cli/dev-command/) documentation for more details.
 :::
 
 #### Answering yes to local dev
