adjustments-glossary-gethelp-viewmetrics-menu

--- a/src/content/docs/en/pages/0. main-menu/before-begin/get-help.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/get-help.mdx
@@ -8,7 +8,7 @@ permalink: /documentation/products/get-help/
 
 Azion has different tools and channels to provide help at any point in your journey.
 
-- [Consult the Help Center](/en/documentation/products/getting-started/#getting-to-know-real-time-manager): while navigating **Real-Time Manager (RTM)**, you can open the **Help Center** by clicking the **(?)** icon on RTM's header or the **Get help (?)** tags on product's pages. It’ll display a series of documentations related to the screen you're currently on and other helpful links.
+- [Consult the Help Center](/en/documentation/products/getting-started/#getting-to-know-real-time-manager): while navigating **Real-Time Manager (RTM)**, you can open the **Help Center** by clicking the question mark **(?)** icon on RTM's header or the **Get help** tags on product's pages. It’ll display a series of documentations related to the screen you're currently on and other helpful links.
 
 - [Read the Documentation](/en/documentation/): with Azion Docs, you find reference, guides, and journeys related to all Azion products and services.
 
@@ -18,6 +18,4 @@ Azion has different tools and channels to provide help at any point in your jour
 
 - [Join the Discord community](https://discord.com/invite/Yp9N7RMVZy): through the platform, you can share ideas and updates with other Azion workers and users.
 
-- [Open a ticket](/en/documentation/products/guides/open-tickets/): if you encounter a problem while using Azion, you can open a ticket to contact the Support team.
-
-- [Call Support](/en/documentation/services/support/#service-channels): if you encounter an urgent problem while using Azion, you can call the Support team in case you have the **Enterprise** or **Mission Critical** service plans.
+- [Contact Support](/en/documentation/services/support/#service-channels): if you encounter a problem while using Azion, you can contact the Support team. You can [open a ticket](/en/documentation/products/guides/open-tickets/) or use the Slack Channel, if your service plan offers it.
