--- a/src/content/docs/en/pages/0. main-menu/reference/glossary.mdx
+++ b/src/content/docs/en/pages/0. main-menu/reference/glossary.mdx
@@ -8,6 +8,8 @@ permalink: /documentation/products/azion-glossary/
 
 This glossary introduces key concepts and terminology related to the Azion platform and products.
 
+For more on edge terminology and concepts, see [State of the Edge](https://stateoftheedge.com/). For technology terminology in general, see [NIST](https://www.nist.gov/).
+
 ### ANAME
 
 The *root domain* name type record, also known as *naked domain* registered in the [DNS](#dns). This is the domain you acquire and manage from an external domain provider. For example: `yourdomain.org`.
