--- a/src/content/docs/en/pages/guides/real-time-metrics/use-metrics/index.mdx
+++ b/src/content/docs/en/pages/guides/real-time-metrics/use-metrics/index.mdx
@@ -8,13 +8,15 @@ permalink: /documentation/products/guides/use-real-time-metrics/
 
 import Button from '~/components/Button.astro'
 
-Note that the new Real-Time Metrics provides data and metrics starting from **October 15th, 2022**. If you want to view metrics for up to 2 years and before October 15th, 2022, see [Historical Real-Time Metrics](/en/documentation/products/historical-real-time-metrics/).
-
 **Real-Time Metrics** provides you with real-time access to metrics, through charts. Once you've created an edge application or even configured other product and modules, you can view your application's events. Charts exhibit data as soon as your applications begin to have incoming accesses and traffic.
 
 <Button href="/en/documentation/products/real-time-metrics/" text="go to Real-Time Metrics reference" variant="secondary"></Button>
 
 Continue reading this guide to find out how to use and configure Real-Time Metrics on Azion to analyze the events related to the performance of your applications.
+
+:::note
+The new Real-Time Metrics provides data and metrics starting from **October 15th, 2022**. If you want to view metrics for up to 2 years and before October 15th, 2022, see [Historical Real-Time Metrics](/en/documentation/products/historical-real-time-metrics/).
+:::
 
 ---
 
