how edge works graphic

--- a/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
@@ -79,7 +79,7 @@ There are some key principles to understand the edge computing architecture:
 - This process can be completed faster and more efficiently because requests are resolved at the edge, with less data traveling, and not in the origin's infrastructure or cloud.
 - It's inherently decentralized and geographically distributed, which means that workloads can be spread across multiple nodes (servers) and load-balanced, being scalable and fault-tolerant.
 
-[IMG edge architecture: in-progress]
+![How edge works graphic](/public/assets/docs/images/uploads/how-edge-works.png)
 
 1. The outermost layer in edge architecture includes **end-user devices**, **gadgets**, and **sensors**. These devices gather data from the physical environment and enable real-time processing and analysis at the edge.
 2. These devices are typically connected to **local or private networks**, with latency lower than 5ms.
