EDU-2058-planos-de-servico (#250)
* EDU-2058-planos-de-servico

* improvements

Co-authored-by: Mariana Bellorín Aguilera <89138244+MarianaAguilera@users.noreply.github.com>
Co-authored-by: Bru Andrade <119969414+bru-andrade@users.noreply.github.com>
Co-authored-by: Guilherme M. Petry <109288495+peeetry@users.noreply.github.com>

* url

* crase

---------

Co-authored-by: Mariana Bellorín Aguilera <89138244+MarianaAguilera@users.noreply.github.com>
Co-authored-by: Bru Andrade <119969414+bru-andrade@users.noreply.github.com>
Co-authored-by: Guilherme M. Petry <109288495+peeetry@users.noreply.github.com>

--- a/src/content/docs/pt-br/pages/servicos/business-support-events.mdx
+++ b/src/content/docs/pt-br/pages/servicos/business-support-events.mdx
@@ -3,7 +3,7 @@ title: Business Events Support
 description: Business Events Support refere-se ao suporte e à assistência prestados para auxiliar os clientes durante os eventos em tempo real.
 meta_tags: services, support, Business Events Support
 namespace: docs_support_bes
-permalink: /documentacao/servicos/suporte/business-events-support/
+permalink: /documentacao/servicos/business-events-support/
 ---
 
 **Business Events Support** refere-se ao suporte e à assistência prestados para auxiliar os clientes durante os eventos em tempo real. Neste serviço, vários testes são realizados para avaliar o desempenho e a capacidade do sistema em condições de carga intensa.
@@ -14,14 +14,14 @@ Este serviço oferece um acompanhamento de engenheiros especialistas, consultori
 
 - Monitoramento de testes de estresse para avaliar o desempenho e a capacidade do sistema sob condições de carga intensa.
 - Sugestões de configuração e ajuste do ambiente de produção para garantir uma performance ao vivo suave e otimizada.
-- Resolução de problemas técnicos durante o go-live.
-- Monitoramento contínuo do desempenho do sistema durante o go-live.
+- Resolução de problemas técnicos durante o evento.
+- Monitoramento contínuo do desempenho do sistema durante o evento.
 - Assistência técnica e suporte dedicados para resolver qualquer problema emergente.
 
 Se você tiver um plano **Enterprise** ou **Mission Critical**, é possível solicitar esse serviço pelo [portal de Suporte](https://tickets.azion.com/pt-BR/support/login/new) com até `72 horas` de antecedência do evento.
 
-Para mais detalhes sobre os Azion **Service Plans**, [veja as opções de Preços](https://www.azion.com/pt-br/precos/).
+Para obter informações mais detalhadas, consulte as opções de [Planos de Serviço](/pt-br/documentacao/servicos/planos-de-servico/).
 
 :::note[nota]
-O serviço Go-Live Support é conduzido remotamente por vídeo chamadas.
+O serviço Business Events é conduzido remotamente por vídeo chamadas.
 :::
