--- a/src/content/docs/pt-br/pages/servicos/suporte-cliente.mdx
+++ b/src/content/docs/pt-br/pages/servicos/suporte-cliente.mdx
@@ -42,7 +42,7 @@ O usuário deve estar previamente autorizado pelo cliente e configurado na ferra
 | Enterprise | Suporte 24/7 via ticket, email e telefone, acesso 8/5 a Engenheiros de P&D via ticket e telefone. |
 | Mission Critical | Suporte 24/7 via ticket, email e telefone, acesso 8/5 a Engenheiros de P&D via ticket e telefone. |
 
-Para mais detalhes sobre os Azion **Service Plans**, [veja as opções de Preços](https://www.azion.com/pt-br/precos/).
+Para obter informações mais detalhadas, consulte as opções de [Planos de Serviço](/pt-br/documentacao/servicos/planos-de-servico/).
 
 ## Tempo de resposta
 
