--- a/src/content/docs/pt-br/pages/servicos/slack-channel.mdx
+++ b/src/content/docs/pt-br/pages/servicos/slack-channel.mdx
@@ -1,9 +1,10 @@
 ---
 title: Slack Channel
-description: The Slack Channel service refers to support and assistance provided to assist customers through written communication.
+description: 
+O serviço Slack Channel refere-se ao suporte e assistência fornecidos para auxiliar os clientes por meio de comunicação escrita.
 meta_tags: services, support, slack channel
 namespace: docs_support_slack_channel
-permalink: /documentacao/servicos/suporte/slack-channel/
+permalink: /documentacao/servicos/slack-channel/
 ---
 
 O serviço **Slack Channel** refere-se ao suporte e assistência fornecidos para auxiliar os clientes por meio de comunicação escrita. Ideal para uma comunicação dinâmica, o serviço Slack Channel oferece orientação e suporte em tempo real para os momentos mais relevantes do seu negócio. É um canal ágil para resolver problemas e entrar em contato com nossa equipe de Engenheiros de Suporte, 8x5.
@@ -17,4 +18,4 @@ O serviço **Slack Channel** refere-se ao suporte e assistência fornecidos para
 :::note[nota]
 Este serviço não suporta a abertura de tickets diretamente e não há garantia de tempo de resposta. Clientes devem ter sua própria conta paga do Slack para usar este serviço.
 
-Se você tiver um plano de serviço Enterprise ou Mission Critical, é possível solicitar esse serviço [contatando o time de Vendas](https://www.azion.com/en/contact-sales/). Para informações mais detalhadas sobre os Azion Service Plans, [veja as opções de Preços](https://www.azion.com/en/pricing).
+Se você tiver um plano de serviço **Enterprise** ou **Mission Critical**, é possível solicitar esse serviço [contatando o time de Vendas](https://www.azion.com/en/contact-sales/). Para obter informações mais detalhadas, consulte as opções de [Planos de Serviço](/pt-br/documentacao/servicos/planos-de-servico/).
