edit service plans

--- a/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/products.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/products.mdx
@@ -147,7 +147,7 @@ Azion offers four levels of service plans to support you during your journey wit
 - **Developer**: offers access to features in **Preview** and Azion's online learning program, as well as unlimited access to community, documentation, guides, whitepapers, and bug reports. 
 - **Business**: includes access to technical support 24/7 via ticket and email, DDoS Protection Unmetered, and Integration Services.
 - **Enterprise**: provides support 24/7 via ticket, email, and phone, 8/5 access to R&D Engineers through ticket and phone. It also includes features such as Single Sign-On (SSO), Business Events Support, Best Practice Review (BPR), and additional compliance features.
-- **Mission Critical**: includes support 24/7 via ticket, email, and phone, 8/5 access to R&D Engineers through ticket and phone. It also provides all included in **Enterprise**, with extended features and support.
+- **Mission Critical**: provides all features in the **Enterprise** plan, with extended time related to Business Events Support, Integration Services, Best Practice Review (BPR). It also includes Technical Account Manager consultancy hours.
 
 Additionally, you can buy **add-ons** such as Custom Education Programs, Slack Channel assistance, consultancy from a Technical Account Manager, Security Response Team (SRT) support, BPR and Integration Services, and FIPS 140 Level 3 compliance feature.
 
