--- a/src/content/docs/en/pages/guides/getting-to-know-rtm/getting-to-know-rtm.mdx
+++ b/src/content/docs/en/pages/guides/getting-to-know-rtm/getting-to-know-rtm.mdx
@@ -37,9 +37,9 @@ Documentation related to RTM's screens in the **Help Center** isn't available fo
 
 4. **Account menu**: it's on the upper-right corner. There, you can see and update information related to your account.
 
-5. **Getting Started** section: it has the **Start with a template** shortcut to start using the Azion Edge Platform. This block will guide you through the initial steps to [building an edge application with an Azion template](/en/documentation/products/start-with-a-template/) that best suits your needs.
+5. **Get Started** section: it has the **Start with a template** shortcut to start using the Azion Edge Platform. This block will guide you through the initial steps to [building an edge application with an Azion template](/en/documentation/products/start-with-a-template/) that best suits your needs.
 
-6. This section include two blocks:
+6. Next to this section, there are two blocks:
 - **Manage your Domains**: use this block to visit the [Domains](/en/documentation/products/edge-application/domains/) page. There, you'll be able to manage and add domains to your applications.
 - **View Edge Application Metrics**: there, you'll find insights based on your applications' performance, availability, and security. This link will take you to [Real-Time Metrics](/en/documentation/products/real-time-metrics/).
 
